--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "type":"module",
-  "name": "entrega-3",
+  "name": "pre-entrega-1",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
