--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "type":"module",
+  "type": "module",
   "name": "pre-entrega-1",
   "version": "1.0.0",
   "description": "",
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
+    "handlebars": "^4.7.8",
+    "socket.io": "^4.7.2",
+    "websocket": "^1.0.34"
   }
 }
