--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "handlebars": "^4.7.8",
+    "mongodb": "^6.0.0",
+    "mongoose": "^7.5.1",
     "socket.io": "^4.7.2",
     "websocket": "^1.0.34"
   }
