--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "handlebars": "^4.7.8",
-    "mongodb": "^6.0.0",
     "mongoose": "^7.5.1",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.7.2",
     "websocket": "^1.0.34"
   }
